apps/clubs/dci/summercamp2026/prod/httpproxy.yaml
apiVersion: projectcontour.io/v1
kind: HTTPProxy
metadata:
  name: dci-summercamp2026
spec:
  virtualhost:
    fqdn: summercamp2026.etsmtl.club
    tls:
      secretName: dci-summercamp2026
      minimumProtocolVersion: "1.3"
  routes:
    - conditions:
        - prefix: /
      enableWebsockets: true
      services:
        - name: dci-summercamp2026-svc
          port: 80
---
apiVersion: projectcontour.io/v1
kind: HTTPProxy
metadata:
  name: dci-summercamp2026-dciets
spec:
  virtualhost:
    fqdn: summercamp.dciets.com
    tls:
      secretName: dci-summercamp2026-dciets-tls
      minimumProtocolVersion: "1.3"
  routes:
    - conditions:
        - prefix: /
      enableWebsockets: true
      services:
        - name: dci-summercamp2026-svc
          port: 80
